deployments/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hosting-data-service
  labels:
    app: hosting-data-service
spec:
  ports:
    - port: 8080
      name: https
      targetPort: 8080
  selector:
    app: hosting-data
